--- a/Index.html
+++ b/Index.html
@@ -198,34 +198,34 @@
         <div class="line"></div>
         <div class="product-section">
             <div class="product">
-                <h2>Product1</h2>
-                <p>dghsghsdg</p>
-                <p>dghsghsdg</p>
-                <p>dghsghsdg</p>
+                <h2>Our products</h2>
+                <p>Support</p>
+                <p>Sale</p>
+                <p>Guide</p>
             </div>
             <div class="product">
-                <h2>Product2</h2>
-                <p>dghsghsdg</p>
-                <p>dghsghsdg</p>
-                <p>dghsghsdg</p>
+                <h2>Top Feature</h2>
+                <p>Ticket system</p>
+                <p>Knowledge Base</p>
+                <p>community</p>
             </div>
             <div class="product">
-                <h2>Product3</h2>
-                <p>dghsghsdg</p>
-                <p>dghsghsdg</p>
-                <p>dghsghsdg</p>
+                <h2>Resources</h2>
+                <p>Product</p>
+                <p>Demo</p>
+                <p>Blog</p>
             </div>
             <div class="product">
-                <h2>Product4</h2>
-                <p>dghsghsdg</p>
-                <p>dghsghsdg</p>
-                <p>dghsghsdg</p>
+                <h2>Company</h2>
+                <p>About us</p>
+                <p>Press</p>
+                <p>Events</p>
             </div>
             <div class="product">
-                <h2>Product5</h2>
-                <p>dghsghsdg</p>
-                <p>dghsghsdg</p>
-                <p>dghsghsdg</p>
+                <h2>Favorite things</h2>
+                <p>Startups</p>
+                <p>BenchMark</p>
+                <p>Small buisness</p>
             </div>
         </div>
 </div>
